--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Roboto', sans-serif;
+  
 }
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: inter,sans-serif;
+  font-weight: 600;
+}
+
+h1 { font-size: 2.5rem; }
+h2 { font-size: 2rem; }
+h3 { font-size: 1.75rem; }
+h4 { font-size: 1.5rem; }
+h5 { font-size: 1.25rem; }
+h6 { font-size: 1rem; }
 
 a {
   text-decoration: none;
@@ -36,10 +49,11 @@ h1 {
 #description {
   width: 50%;
   padding-right: 8px;
+  font-size: 1.25rem;
 }
 
 #team {
-  width: 50%;
+  width:50%;
 }
 
 #team-image {
@@ -47,10 +61,29 @@ h1 {
   width: 100%
 }
 
-.location {
-  color: gray;  
-  margin-bottom: 16px;
+#Jobs-table{
+  width: 100%;
+  border: 1px solid gray;
+  border-collapse: collapse;
 }
+
+.Jobs-header-row th {
+  border: 1px solid  gray;
+  padding: 8px;
+  background-color: aliceblue;
+  text-align: center;
+}
+
+.Jobs-data-row td {
+  border: 1px solid gray;
+  padding: 8px;
+}
+
+#job-table tr:nth-child(odd) {
+  background-color:ghostwhite ;
+}
+
+
 
 h2 {
   text-align: center;
@@ -89,5 +122,6 @@ h3 {
 
 .copyright {
   color: gray;
+  font-size: 0.875rem;
 }
 
