--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
+html{
+  font-size: 16px;
+  }
+
 body {
   margin: 0;
   padding: 0;
   font-family:'Roboto', sans-serif;
-  
+  font-size: 1rem;
+  color: #444444 ;
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: inter,sans-serif;
+  font-family: 'inter',sans-serif;
   font-weight: 600;
+  color: #222222;
 }
 
 h1 { font-size: 2.5rem; }
@@ -19,6 +25,11 @@ h6 { font-size: 1rem; }
 
 a {
   text-decoration: none;
+  color: #3b82f6;
+}
+
+a:hover a:focus {
+  color:#d81d7e;
 }
 
 #navbar {
@@ -70,8 +81,9 @@ h1 {
 .Jobs-header-row th {
   border: 1px solid  gray;
   padding: 8px;
-  background-color: aliceblue;
+  background-color: #DBEAFE;
   text-align: center;
+  color: #222222;
 }
 
 .Jobs-data-row td {
@@ -79,11 +91,9 @@ h1 {
   padding: 8px;
 }
 
-#job-table tr:nth-child(odd) {
-  background-color:ghostwhite ;
+#jobs-table tr:nth-child(odd) {
+  background-color: ghostwhite;
 }
-
-
 
 h2 {
   text-align: center;
@@ -105,7 +115,7 @@ h3 {
 }
 
 #footer {
-  background-color: ghostwhite;
+  background-color: #fafafa;
   padding: 8px;
   margin-top: 32px;
   text-align: center;
@@ -121,7 +131,7 @@ h3 {
 }
 
 .copyright {
-  color: gray;
+  color: #71717a;
   font-size: 0.875rem;
 }
 
